[metadata]
name = radiodtmf
version = 0.1.0
author = X
url = https://github.com/XYandZ/radio-dtmf-module

[options]
zip_safe = False
include_package_data = True
;package_dir=
;    =src
packages=find:
install_requires =
    PyAudio ==0.2.11
    numpy ==1.22.4
    scipy ==1.8.1
    smbus2==0.4.2
    RPi.bme280==0.2.4
    pyttsx3 ==2.90
    pyowm ==3.3.0
python_requires = >= 3.6

;[options.packages.find]
;where=src

[options.package_data]
* = *.ini