[metadata]
name = radiodtmf
version = 0.2.0
author = X
url = https://github.com/XYandZ/radio-dtmf-module

[options]
zip_safe = False
include_package_data = True
;package_dir=
;    =radiodtmf
packages=find:
install_requires =
    PyAudio ==0.2.11
    python-aqi==0.6.1
    numpy ==1.22.4
    scipy ==1.8.1
    smbus2==0.4.2
    sds011==0.2.0
    RPi.bme280==0.2.4
    pyttsx3 ==2.90
python_requires = >= 3.6

;[options.packages.find]
;where=radiodtmf

[options.package_data]
* = *.ini